[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/UI Scripts/Server Menu.gd" type="Script" id=1]
[ext_resource path="res://Load Arrow.png" type="Texture" id=2]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 11
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 3 )

[node name="Server Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1927.0
margin_bottom = 1072.0
color = Color( 0.360784, 0.698039, 0.843137, 0.619608 )

[node name="Host Menu" type="Control" parent="."]
anchor_left = 0.22
anchor_top = 0.5
anchor_right = 0.22
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0

[node name="HostLabel" type="Label" parent="Host Menu"]
anchor_left = 0.5
anchor_right = 0.538
margin_left = -35.4
margin_top = 19.0
margin_right = 25.2
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Host"

[node name="Host" type="VBoxContainer" parent="Host Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -57.27
margin_right = 105.0
margin_bottom = 57.25

[node name="Number of players" type="LineEdit" parent="Host Menu/Host"]
margin_right = 210.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
align = 1
placeholder_text = "Maximum number of players"
placeholder_alpha = 0.461

[node name="Port" type="LineEdit" parent="Host Menu/Host"]
margin_top = 30.0
margin_right = 210.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 3 )
align = 1
placeholder_text = "Port: between 1024 and 60000"
placeholder_alpha = 0.461

[node name="Create Server" type="Button" parent="Host Menu/Host"]
margin_top = 59.0
margin_right = 210.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 4 )
text = "Create Server"

[node name="Join Menu" type="Control" parent="."]
anchor_left = 0.78
anchor_top = 0.5
anchor_right = 0.78
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0

[node name="JoinLabel" type="Label" parent="Join Menu"]
anchor_left = 0.5
anchor_right = 0.538
margin_left = -35.4
margin_top = 19.0
margin_right = 25.2
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
text = "Join"

[node name="Join" type="VBoxContainer" parent="Join Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -57.26
margin_right = 105.0
margin_bottom = 57.26

[node name="Server IP" type="LineEdit" parent="Join Menu/Join"]
margin_right = 210.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 5 )
align = 1
placeholder_text = "Server IP"
placeholder_alpha = 0.461
__meta__ = {
"_editor_description_": "lan connection"
}

[node name="Port" type="LineEdit" parent="Join Menu/Join"]
margin_top = 30.0
margin_right = 210.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 6 )
align = 1
placeholder_text = "Port: between 1024 and 60000"
placeholder_alpha = 0.461

[node name="Join Server" type="Button" parent="Join Menu/Join"]
margin_top = 59.0
margin_right = 210.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 7 )
text = "Join Server"

[node name="Common" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.366
anchor_right = 0.5
anchor_bottom = 0.369
margin_left = -116.0
margin_top = -21.28
margin_right = 116.0
margin_bottom = -0.52002

[node name="Username" type="LineEdit" parent="Common"]
margin_right = 232.0
margin_bottom = 32.0
grow_horizontal = 2
custom_fonts/font = SubResource( 8 )
align = 1
max_length = 12
placeholder_text = "Username"
placeholder_alpha = 0.461

[node name="Back Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.52
margin_top = -10.0
margin_right = 65.52
margin_bottom = 10.0
custom_fonts/font = SubResource( 9 )
text = "Back"

[node name="Loading_arrow" type="TextureRect" parent="."]
visible = false
anchor_left = 0.411
anchor_top = 0.25
anchor_right = 0.424
anchor_bottom = 0.265
rect_scale = Vector2( 0.1, 0.1 )
rect_pivot_offset = Vector2( 174.397, 202.528 )
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Loading_text" type="Label" parent="."]
visible = false
anchor_left = 0.499
anchor_top = 0.393
anchor_right = 0.503
anchor_bottom = 0.407
grow_horizontal = 2
custom_fonts/font = SubResource( 10 )
text = "Connecting..."
align = 1

[connection signal="failed_to_connect" from="." to="." method="_connection_failed"]
[connection signal="pressed" from="Host Menu/Host/Create Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="Join Menu/Join/Join Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="Back Button" to="." method="_on_Back_Button_pressed"]
